src/query/functions-v2/tests/it/scalars/testdata/variant.txt
ast            : parse_json(NULL)
raw expr       : parse_json(NULL)
checked expr   : parse_json<NULL>(NULL)
optimized expr : NULL
output type    : NULL
output domain  : {NULL}
output         : NULL


error: 
  --> SQL:1:1
  |
1 | parse_json('nuLL')
  | ^^^^^^^^^^^^^^^^^^ unable to parse 'nuLL': expected ident at line 1 column 3



ast            : parse_json('null')
raw expr       : parse_json("null")
checked expr   : parse_json<String>("null")
optimized expr : [8, 0, 0, 0, A, 76, 0, 0]
output type    : Variant
output domain  : Unknown
output         : null


ast            : parse_json(' 	')
raw expr       : parse_json(" \t")
checked expr   : parse_json<String>(" \t")
optimized expr : [8, 0, 0, 0, A, 76, 0, 0]
output type    : Variant
output domain  : Unknown
output         : null


ast            : parse_json(s)
raw expr       : parse_json(ColumnRef(0)::String)
checked expr   : parse_json<String>(ColumnRef(0))
evaluation:
+--------+-----------------------------------------------------------+----------------------------+
|        | s                                                         | Output                     |
+--------+-----------------------------------------------------------+----------------------------+
| Type   | String                                                    | Variant                    |
| Domain | {"\"\\\\\\\"abc\\\\\\\"\""..="{\"k\":\"v\",\"a\":\"b\"}"} | Unknown                    |
| Row 0  | "null"                                                    | null                       |
| Row 1  | "true"                                                    | true                       |
| Row 2  | "9223372036854775807"                                     | 9223372036854775807        |
| Row 3  | "-32768"                                                  | -32768                     |
| Row 4  | "1234.5678"                                               | 1234.5678                  |
| Row 5  | "1.912e2"                                                 | 191.2                      |
| Row 6  | "\"\\\\\\\"abc\\\\\\\"\""                                 | "\"abc\""                  |
| Row 7  | "\"databend\""                                            | "databend"                 |
| Row 8  | "{\"k\":\"v\",\"a\":\"b\"}"                               | { "k": "v", "a": "b" }     |
| Row 9  | "[1,2,3,[\"a\",\"b\",\"c\"]]"                             | [1, 2, 3, ["a", "b", "c"]] |
+--------+-----------------------------------------------------------+----------------------------+
evaluation (internal):
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| s      | StringColumn { data: 0x6e756c6c74727565393232333337323033363835343737353830372d3332373638313233342e35363738312e3931326532225c5c5c226162635c5c5c2222226461746162656e64227b226b223a2276222c2261223a2262227d5b312c322c332c5b2261222c2262222c2263225d5d, offsets: [0, 4, 8, 27, 33, 42, 49, 62, 72, 89, 110] }                                                                                                                                                                                                                            |
| Output | StringColumn { data: 0x080000000a76000009000000087600010010000000127600ffffffffffffff7f000c0000001076000080ffff0010000000017600adfa5c6d454a934000100000000176006666666666e667400014000000027600080000005c226162635c22000015000000027600090000006461746162656e6400001f00000003760017000000026b000200000076000261000200000062000000450000000476003d00000010300001000000103100020000001032000300000004330020000000023000020000006100023100020000006200023200020000006300000000, offsets: [0, 8, 17, 33, 45, 61, 77, 97, 118, 149, 218] } |
+--------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+


